Settings: swap DirectionDelegate for a simpler, correcter impl

R=dpapad@chromium.org
BUG=715509

Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ib85bfd34c5ea57ef6ee0b6fc5509a1bb0a38ac6b